# libsandbox-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
benches/: command_execution.rs  io.rs  parallel_execution.rs  sandbox_bench.rs  sandbox_creation.rs  seccomp_profiles.rs
benches/common/: mod.rs
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md
examples/: agent_composed.rs  agent_preset.rs  code_judge.rs  custom_process.rs  demo.rs  network_allow.rs  spawn_demo.rs
nix/: checks.nix  common.nix
src/: builder.rs  error.rs  executor.rs  lib.rs  namespace.rs  result.rs  sandbox.rs  stdio.rs
src/cgroup/: limits.rs  manager.rs  mod.rs  strategy.rs
src/config/: environment.rs  filesystem.rs  mod.rs  namespace.rs  network.rs  resource.rs  security.rs
src/landlock/: decision.rs  mod.rs  tests.rs
src/mount/: child.rs  handle.rs  holes.rs  mod.rs  ops.rs  syscalls.rs  validation.rs
src/network/: manager.rs  mod.rs
src/process/: child.rs  child_setup.rs  fd.rs  kill.rs  mod.rs  protocol.rs  spawn.rs  wait.rs
src/seccomp/: bpf.rs  builder.rs  filter.rs  mod.rs  presets.rs  syscalls.rs
tests/: api_safety.rs  integration.rs  integration_test.rs  security.rs
tests/integration/: basic_exec.rs  concurrency.rs  error_handling.rs  observability.rs  proxy_advanced.rs  resource_limits.rs
tests/security/: escape_attempts.rs  network_security.rs  process_management.rs  resource_enforcement.rs  resource_exhaustion.rs  syscall_filter.rs
