[package]
name = "libsandbox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Linux-first sandbox runtime for interactive agent sessions"
keywords = ["sandbox", "linux", "agent", "security"]
categories = ["os::linux-apis", "development-tools"]
autobenches = false

[dependencies]
# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Async runtime (for HTTP proxy)
tokio = { version = "1.0", features = ["net", "io-util", "rt-multi-thread", "sync", "macros", "time"] }

# Linux syscalls
nix = { version = "0.31", features = ["sched", "mount", "signal", "user", "fs", "hostname", "process", "net"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sandbox_creation"
harness = false

[[bench]]
name = "command_execution"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "seccomp_profiles"
harness = false

[[bench]]
name = "parallel_execution"
harness = false
